images/web/k8s/stage/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: webs-manresa-cat-stage
  name: webs-manresa-cat-stage
  namespace: stage
spec:
  type: ClusterIP
  clusterIP: 10.31.241.208
  sessionAffinity: ClientIP
  selector:
    app: webs-manresa-cat-stage
  ports:
    - name: http
      protocol: TCP
      port: 80
